# services/pedidos/cmd/api/main.go
@@ -14,6 +14,7 @@ import (
 
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
+	"github.com/joho/godotenv"
 	httpSwagger "github.com/swaggo/http-swagger" // Importa o handler do swagger
 )
 
@@ -22,6 +23,14 @@ import (
 // @description Este é o microsserviço responsável pelo gerenciamento de pedidos.
 // @BasePath /
 func main() {
+	// --- CARREGA O ARQUIVO .ENV (APENAS PARA AMBIENTE LOCAL) ---
+	err := godotenv.Load()
+	if err != nil {
+		// Não usamos log.Fatalf porque em produção o arquivo .env não existirá
+		// e não queremos que a aplicação pare. Apenas avisamos no console.
+		log.Println("Aviso: Erro ao carregar arquivo .env")
+	}
+
 	// 1. Inicializa a Conexão com o Banco de Dados
 	dbConn, err := db.NewConnection()
 	if err != nil {
@@ -42,6 +51,7 @@ func main() {
 	// Rotas da API
 	r.Post("/pedidos", pedidoHandler.CriarPedidoHandler)
 	r.Get("/pedidos/{id}", pedidoHandler.BuscarPedidoPorIDHandler)
+	r.Get("/pedidos", pedidoHandler.ListarTodosPedidos)
 
 	// Rota para a documentação do Swagger (AGORA CORRIGIDA)
 	r.Get("/swagger/*", httpSwagger.Handler())
